Release ...
* sccs: Accept the "-a", "-p", and "-B" options to "diff" with the "diffs"
  and "sccsdiff" sub-commands.
* sccsdiff: Accept the "-a" and "-B" options to "diff"; also accept the
  "-P" option but pass it as "-p" to "diff".
* get: Do not dump core on a corrupted s-file.
* Mac OS X portability fixes (Stefan Tramm).

Release 070102
* delta: If the "bdiff" utility cannot be found, execute regular "diff"
  instead. This removes a circular dependency on the Heirloom Toolchest
  on systems lacking "bdiff" in their default installation, such as
  Linux or FreeBSD.
* SCCS: Do not use the SYS_NMLN constant since it is not portable (bug
  reported by John Cowan).
* help: Fixed for arguments consisting of letters only (command usage),
  default messages file, and error message if no appropriate key could
  be found. These problems had been introduced with the removal of the
  internationalization code during the port.

Release 061220
* The SCCS version control system has been added as a port of the source
  code released by Sun yesterday.
* lex: An appropriate prototype for yyreject() is now supplied when the
  -e or -w options are used.

Release 051216
* m4: The traditional variant now accepts the shift operators "<<" and
  ">>" for the "eval" macro.
* m4: The "eval" macro now uses 32-bit signed integer arithmetic
  regardless of the host architecture, as specified by both SVID3 and
  SUSv3.
* lex: The functions "allprint_w", "reject_w", "yyless_w", "reject_e",
  and "yyless_e" are now included in libl.a for use with the "-w" and
  "-e" options, respectively.
* lex: The "yyin" and "yyout" file descriptors now point to "stdin" and
  "stdout" when calling main() as it has been historically the case on
  Unix systems. This requires the use of non-standard compiler features
  and currently only works with gcc, Sun C, and HP ANSI C. Otherwise,
  these descriptors are initialized at the first call to yylex(), as it
  had been the case with the previous release.